# sylpheed

./: AUTHORS  COPYING  ChangeLog  ChangeLog-1.0.ja  ChangeLog.ja  INSTALL  INSTALL.ja  LICENSE  Makefile.am  NEWS  NEWS-2.0  PLUGIN.ja.txt  PLUGIN.txt  README  README.es  README.ja  TODO  TODO.ja  TODO.jp  autogen.sh  configure.ac  configure.in  ltmain.sh  makeosx.sh  makewin32.sh  mime.types  oauth2.ini.sample  sylpheed-mailto-protocol.reg  sylpheed-mailto-protocol_admin.reg  sylpheed-mailto-protocol_user.reg  sylpheed.desktop  sylpheed.spec.in
ac/: Makefile.am  aclocal-include.m4  check-type.m4  gnupg-check-typedef.m4
ac/missing/: gpgme.m4
faq/: Makefile.am
faq/de/: Makefile.am  sylpheed-faq-1.html  sylpheed-faq-2.html  sylpheed-faq-3.html  sylpheed-faq.html
faq/en/: ChangeLog  LICENSE  Makefile.am  NEWS  faq.xml  faq_001.xml  faq_002.xml  faq_003.xml  fdl.xml  sylpheed-faq-1.html  sylpheed-faq-2.html  sylpheed-faq-3.html  sylpheed-faq-4.html  sylpheed-faq.html
faq/es/: Makefile.am  sylpheed-faq-1.html  sylpheed-faq-2.html  sylpheed-faq-3.html  sylpheed-faq.html
faq/fr/: Makefile.am  sylpheed-faq-1.html  sylpheed-faq-2.html  sylpheed-faq-3.html  sylpheed-faq.html
faq/it/: Makefile.am  sylpheed-faq-1.html  sylpheed-faq-2.html  sylpheed-faq-3.html  sylpheed-faq.html
intl/: plural.c
libsylph/: Makefile.am  account.c  account.h  base64.c  base64.h  codeconv.c  codeconv.h  customheader.c  customheader.h  defs.h  displayheader.c  displayheader.h  enums.h  filter.c  filter.h  folder.c  folder.h  html.c  html.h  imap.c  imap.h  libsylph-0.def  mbox.c  mbox.h  md5.c  md5.h  md5_hmac.c  md5_hmac.h  mh.c  mh.h  news.c  news.h  nntp.c  nntp.h  oauth2.c  oauth2.h  pop.c  pop.h  prefs.c  prefs.h  (+43 more)
macosx/: Makefile.am
macosx/bundle/: Info-sylpheed.plist  Makefile.am  README.txt  launcher.sh  sylpheed.bundle  sylpheed.icns
manual/: Makefile.am
manual/en/: Makefile.am  sylpheed-1.html  sylpheed-10.html  sylpheed-11.html  sylpheed-12.html  sylpheed-13.html  sylpheed-14.html  sylpheed-15.html  sylpheed-16.html  sylpheed-17.html  sylpheed-18.html  sylpheed-19.html  sylpheed-2.html  sylpheed-20.html  sylpheed-21.html  sylpheed-22.html  sylpheed-3.html  sylpheed-4.html  sylpheed-5.html  sylpheed-6.html  sylpheed-7.html  sylpheed-8.html  sylpheed-9.html  sylpheed.html  sylpheed.sgml
manual/ja/: Makefile.am  header.txt  sylpheed-1.html  sylpheed-10.html  sylpheed-11.html  sylpheed-12.html  sylpheed-13.html  sylpheed-14.html  sylpheed-15.html  sylpheed-16.html  sylpheed-17.html  sylpheed-18.html  sylpheed-19.html  sylpheed-2.html  sylpheed-20.html  sylpheed-21.html  sylpheed-22.html  sylpheed-23.html  sylpheed-24.html  sylpheed-25.html  sylpheed-26.html  sylpheed-27.html  sylpheed-3.html  sylpheed-4.html  sylpheed-5.html  sylpheed-6.html  sylpheed-7.html  sylpheed-8.html  sylpheed-9.html  sylpheed.html  sylpheed.sgml
nsis/: COPYING.ja.txt  Makefile.am  README.txt  compile.bat  english.nsh  japanese.nsh  plugin-updater.nsi  spanish.nsh  sylpheed-defs.nsh  sylpheed.nsi  update-manager.nsi
plugin/: Makefile.am
plugin/attachment_tool/: Makefile.am  README  attachment_tool.c
plugin/test/: Makefile.am  README  test.c  test.h
po/: ChangeLog  Makefile.in.in  Makevars  POTFILES.in  be.po  bg.po  cs.po  da.po  de.po  el.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  it.po  ja.po  ko.po  ln.po  lt.po  nl.po  pl.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  tr.po  uk.po  vi.po  zh_CN.po  zh_TW.Big5.po  zh_TW.po
src/: Makefile.am  about.c  about.h  account.c  account.h  account_dialog.c  account_dialog.h  action.c  action.h  addr_compl.c  addr_compl.h  addrbook.c  addrbook.h  addrcache.c  addrcache.h  addressadd.c  addressadd.h  addressbook.c  addressbook.h  addressitem.h  addrindex.c  addrindex.h  addritem.c  addritem.h  alertpanel.c  alertpanel.h  base64.c  base64.h  codeconv.c  codeconv.h  colorlabel.c  colorlabel.h  compose.c  compose.h  customheader.c  customheader.h  defs.h  displayheader.c  displayheader.h  editaddress.c  (+212 more)
src/icons/: Makefile.am  address.xpm  clip.xpm  deleted.xpm  dir-close.xpm  dir-noselect.xpm  dir-open.xpm  group.xpm  interface.xpm  jpilot.xpm  linewrap.xpm  mail.xpm  vcard.xpm
src/pixmaps/: Makefile.am  address.xpm  book.xpm  checkbox_off.xpm  checkbox_on.xpm  clip.xpm  complete.xpm  continue.xpm  dir-close.xpm  dir-open.xpm  forwarded.xpm  group.xpm  interface.xpm  ldap.xpm  new.xpm  replied.xpm  stock_add_16.xpm  stock_close.xpm  stock_dialog_error_48.xpm  stock_dialog_info_48.xpm  stock_dialog_question_48.xpm  stock_dialog_warning_48.xpm  stock_down_arrow.xpm  stock_exec.xpm  stock_mail.xpm  stock_mail_attach.xpm  stock_mail_compose.xpm  stock_mail_forward.xpm  stock_mail_receive.xpm  stock_mail_receive_all.xpm  stock_mail_reply.xpm  stock_mail_reply_to_all.xpm  stock_mail_send.xpm  stock_mail_send_queue.xpm  stock_paste.xpm  stock_preferences.xpm  stock_properties.xpm  stock_remove_16.xpm  stock_search.xpm  stock_trash.xpm  (+4 more)
